Fix mobile layout issues

--- a/src/components/open-source-section/styles.module.css
+++ b/src/components/open-source-section/styles.module.css
@@ -2,6 +2,10 @@
   justify-content: space-between;
 }
 
+.project-row {
+  margin-bottom: 3rem;
+}
+
 .project-row--reverse {
   flex-direction: row-reverse;
 }
@@ -17,4 +21,30 @@
 
 .project-row__img {
   width: 100%;
+  margin-bottom: 1rem;
+}
+
+.project-row__thumb {
+  padding-left: 0;
+}
+
+.project-row__thumb--reverse {
+  padding-right: 0;
+}
+
+.project-row__content {
+  padding-right: 0;
+}
+
+.project-row__content--reverse {
+  padding-left: 0;
+}
+
+@media (max-width: 996px) {
+  .project-row__thumb,
+  .project-row__thumb--reverse,
+  .project-row__content,
+  .project-row__content--reverse {
+    padding: 0;
+  }
 }
